<resources>
    <string name="MapCanva">MapCanva</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="Finish">Finish</string>
    <string name="DrawingActivity">DrawingActivity</string>
    <string name="DrawingActivitySC">DrawingActivitySC</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="drawing_oldal">drawing oldal</string>
    <string name="k_vetkez">Következő</string>
    <string name="map_id">4a538f889c570fe3</string>
    <string name="go">Go</string>
    <string name="Complex">Complex</string>
    <string name="Simple">Simple</string>
    <string name="result">Result</string>
    <string name="restart">Restart</string>
    <string name="change">Change</string>
    <string name="color">Color</string>
    <string name="confirm">Confirm</string>
    <string name="Color">Color</string>
</resources>